Fix mobile table width overflow

--- a/src/app/contactmanager/components/users/users.component.css
+++ b/src/app/contactmanager/components/users/users.component.css
@@ -1,8 +1,33 @@
+.mat-form-field {
+  font-size: 14px;
+  width: 90%;
+}
+
+.example-container {
+  max-width: 100%;
+  overflow: auto;
+}
+
 table {
   width: 100%;
 }
 
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
+.mat-table {
+  overflow-x: scroll;
+}
+
+.mat-cell,
+.mat-header-cell {
+  word-wrap: initial;
+  display: table-cell;
+  padding: 0px 10px;
+  line-break: unset;
+  white-space: nowrap;
+  overflow: hidden;
+  vertical-align: middle;
+}
+
+.mat-row,
+.mat-header-row {
+  min-width: max-content;
 }
